2005-10-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-save.c: can't use smoothing with nonstandard
	sampling ratios. Set the slider sensitivity accordingly (bug #318081).

2005-10-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/gimpressionist/gimpressionist.c: removed About dialog.

	* plug-ins/gimpressionist/Makefile.am
	* plug-ins/gimpressionist/logo.png: removed logo.

2005-10-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/gimpressionist/gimpressionist.[ch]
	* plug-ins/gimpressionist/orientation.c
	* plug-ins/gimpressionist/orientmap.[ch]
	* plug-ins/gimpressionist/placement.c
	* plug-ins/gimpressionist/presets.c
	* plug-ins/gimpressionist/preview.c
	* plug-ins/gimpressionist/repaint.c
	* plug-ins/gimpressionist/size.c

	* plug-ins/gimpressionist/sizemap.c: various minor improvements
	like setting all dialogs transient to the main window.

2005-10-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/gimpressionist/presets.c
	* app/config/gimprc-blurbs.h
	* app/dialogs/quit-dialog.c
	* app/config/gimpcoreconfig.c: changed "The GIMP" to "GIMP".

	* plug-ins/common/xbm.c: unmarked same string for translation.

2005-10-06  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimputils.c: gimp_canonicalize_identifier() is new API,
	mark it as such.

2005-10-06  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpprocbrowserdialog.c: capitalization and other string
	changes.

	* libgimpwidgets/gimpbrowser.c: string unification. Set the
	message label italic.

	* plug-ins/common/plugin-browser.c: use ngettext() for plural forms.

2005-10-06  Sven Neumann  <sven@gimp.org>

	* app/dialogs/dialogs-constructors.c
	* app/dialogs/keyboard-shortcuts-dialog.[ch]: include a check
	button for the "save-accels" gimprc property.

2005-10-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/help/domain.c: try to improve the error message that is
	shown for missing help files.

2005-10-05  Sven Neumann  <sven@gimp.org>

	* app/dialogs/about-dialog.c: set application name to "GIMP", the