@@ -1,3 +1,8 @@
+2005-10-06  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* plug-ins/common/gauss.c: always use RLE if horz or
+	vert radius is less than 1.  Fixes bug #315953.
+
 2005-10-06  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/jpeg/jpeg-save.c: can't use smoothing with nonstandard
